--- a/KEImageMergeView/KEImageMergeView/MergingView.xib
+++ b/KEImageMergeView/KEImageMergeView/MergingView.xib
@@ -17,7 +17,7 @@
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u5u-Nv-gfV">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="249"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G7E-dc-3fW">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G7E-dc-3fW">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="249"/>
                         </imageView>
                         <imageView clipsSubviews="YES" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OFS-ab-0JR">
@@ -51,6 +51,7 @@
             <connections>
                 <outlet property="imgBack" destination="G7E-dc-3fW" id="89h-29-wkd"/>
                 <outlet property="imgFront" destination="OFS-ab-0JR" id="gMS-uG-Iec"/>
+                <outlet property="viewContainer" destination="u5u-Nv-gfV" id="wMH-Pl-UiX"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="345.20089285714283"/>
         </view>
